--- a/.github/workflows/deploy-hexo.yml
+++ b/.github/workflows/deploy-hexo.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Install and Build  
         run: |
           npm install -g hexo-cli 
+          npm install
           hexo clean 
           hexo generate 
 
