--- a/source/_os_pc_backup/app.json
+++ b/source/_os_pc_backup/app.json
@@ -10,7 +10,7 @@
   "showInlineTitle": true,
   "showRibbon": true,
   "promptDelete": false,
-  "readableLineLength": false,
+  "readableLineLength": true,
   "pdfExportSettings": {
     "pageSize": "Letter",
     "landscape": false,
