--- a/source/_os_pc_backup/appearance.json
+++ b/source/_os_pc_backup/appearance.json
@@ -3,8 +3,8 @@
   "showViewHeader": true,
   "cssTheme": "Border",
   "accentColor": "",
-  "theme": "obsidian",
-  "baseFontSize": 16,
+  "theme": "moonstone",
+  "baseFontSize": 17,
   "baseFontSizeAction": true,
   "interfaceFontFamily": "",
   "textFontFamily": "",
